show products_search_sort_bootstrap ui

--- a/src/app/product/product-sort/product-sort.component.html
+++ b/src/app/product/product-sort/product-sort.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-4 col-sm-4">
     <label> sort by </label>
     <select
       class="form-select center"
@@ -11,8 +11,8 @@
       </ng-container>
     </select>
   </div>
-  <div class="col-md-4">
-    <label> search by name</label>
+  <div class="col-md-6 col-sm-4">
+    <label> Title</label>
     <input
       type="text"
       class="form-control"
@@ -21,7 +21,7 @@
       #searchName
     />
   </div>
-  <div class="col-md-4 mt-4">
+  <div class="col-md-2 col-sm-2 mt-4">
     <button
       type="button"
       class="btn btn-outline-primary"
