--- a/src/app/product/product-item/product-item.component.html
+++ b/src/app/product/product-item/product-item.component.html
@@ -1,26 +1,74 @@
-<div class="card col-md-12 col-xs-6 col-lg-12 mt-2">
-  <div class="row no-gutters">
-    <div class="col-md-1 col-sm-1 col-lg-1 text-center mt-5">
-      <p>
-        <small class="text-muted">{{ product.index }}</small>
-      </p>
+<div class="row justify-content-center mb-3">
+  <div class="col-md-12 col-xl-10">
+    <div class="card shadow-0 border rounded-3">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
+            <div class="bg-image hover-zoom ripple rounded ripple-surface">
+              <img
+                src="{{ product.image }}"
+                class="card-img mt-3"
+                style="max-width: 18rem"
+                alt="..."
+              />
+              <a href="#!">
+                <div class="hover-overlay">
+                  <div
+                    class="mask"
+                    style="background-color: rgba(253, 253, 253, 0.15)"
+                  ></div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6 col-xl-6">
+            <h5>{{ product.title }}</h5>
+            <div class="mt-1 mb-0 text-muted small">
+              <h6 class="card-text mb-3" *ngFor="let item of tags">
+                <span class="text-primary"> • </span>
+                <span> {{ item }}</span>
+              </h6>
+            </div>
+            <div class="d-flex flex-row">
+              <app-star
+                class="text-danger mb-1 me-2"
+                [starRating]="product.rating"
+              ></app-star>
+              <span>{{ product.rating }}</span>
+            </div>
+            <p class="text-truncate mb-4 mb-md-0">
+              {{ product.description }}
+            </p>
+          </div>
+          <div
+            class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start"
+          >
+            <div class="d-flex flex-row align-items-center mb-1">
+              <h4 class="mb-1 me-1">${{ product.price }}</h4>
+            </div>
+            <h6 class="text-success">Free shipping</h6>
+            <div class="d-flex flex-column mt-4">
+              <button class="btn btn-primary btn-sm" type="button">
+                Details
+              </button>
+              <button class="btn btn-outline-primary btn-sm mt-2" type="button">
+                Add to wishlist
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-md-5 col-sm-2 col-lg-5">
-      <img
-        src="assets/images/mobile.jpg"
-        class="card-img mt-3"
-        style="max-width: 18rem"
-        alt="..."
-      />
-      <i class="fa-solid fa-star"></i>
-      <h5 class="card-text m-2">
-        <i class="fa-solid fa-star"></i>{{ product.title }}
-      </h5>
+  </div>
+</div>
+
+<!-- <div class="card col-md-12 col-sm-6 col-lg-12 mt-2">
+  <
     </div>
-    <div class="col-md-6 col-sm-3 col-lg-6">
+    <div class="col-md-6 col-lg-6">
       <div class="row">
         <div class="card-body">
-          <div class="row">
+          <div class="row d-flex justify-content-between">
             <div class="col-md-6">
               <h6 class="card-text mb-3" *ngFor="let item of tags">
                 {{ item }}
@@ -38,7 +86,4 @@
       </div>
     </div>
   </div>
-</div>
-<!-- <span [ngClass]="product.activated ? 'text-success' : 'text-danger'">
-      {{ product.activated ? "Activated" : "Blocked" }}
-    </span> -->
+</div> -->
